--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,13 @@
 -->
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-
+  <link rel="stylesheet" href="https://unpkg.com/primeng@4.1.0-rc.2/resources/themes/omega/theme.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/primeng@4.1.0-rc.2/resources/primeng.min.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" type="text/css" href="YOUR_PATH/font-awesome.min.css" />
+
 </head>
 <body>
  <app-hnsearch></app-hnsearch>
